# codebase-maintainer-agent

./: .gitignore  Dockerfile.sandbox  PROJECT_GUIDE.md  README.md  agent_config.yaml  pyproject.toml  render.yaml  requirements.txt  server.py
.claude/: launch.json
.kiro/specs/codebase-maintainer-agent/: .config.kiro  design.md  requirements.md  tasks.md  tasks.meta.json
agent/: __init__.py  __main__.py  config.py  cost_tracker.py  diff_writer.py  logger.py  memory.py  orchestrator.py  protocols.py  sandbox.py  triage.py
agent/eval/: harness.py
agent/tools/: coverage_reader.py  file_reader.py  github_client.py  lint_runner.py  todo_scanner.py
benchmarks/: benchmark_suite.yaml
docs/: orchestration_comparison.md
frontend/: index.html
tests/: test_config.py  test_cost_tracker.py  test_diff_writer.py  test_eval_harness.py  test_logger.py  test_memory.py  test_orchestrator.py  test_protocols.py  test_sandbox.py  test_triage.py
tests/fixtures/: calculator.py  clean_file.py  models_with_errors.py  todo_sample.py  utils_with_lint_errors.py
tests/integration/: test_convert_todos_e2e.py  test_generate_tests_e2e.py  test_lint_fix_e2e.py
tests/tools/: test_file_reader.py  test_github_client.py  test_lint_runner.py  test_todo_scanner.py
