[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["agent*"]

[project]
name = "codebase-maintainer-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "anthropic==0.34.0",
    "httpx==0.27.0",
    "click==8.1.7",
    "PyYAML==6.0.1",
    "docker==7.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.2",
    "pytest-cov==5.0.0",
    "ruff==0.6.1",
]

[project.scripts]
agent = "agent.__main__:cli"

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=agent --cov-report=json:coverage.json"
